# xlfill2pdf

./: .gitignore  README.md  pyproject.toml
tests/: sdces.py  ssss.py  test_excel_processor.py
tests/resources/: test.xlsx
xlfill2pdf/: __init__.py  core.py  font.py  qrcode.py
