[tool.poetry]
name = "xlfill2pdf"
version = "0.2.1"
description = "Excel to PDF converter with font support"
authors = ["'fkl' <18654198191@163.com>"]
readme = "README.md"
packages = [{include = "xlfill2pdf"}]
include = ["xlfill2pdf/fonts/*.ttf", "docs/*.png"]
license = "MIT"
keywords = ["excel", "pdf", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
homepage = "https://github.com/xiwen-haochi/xlfill2pdf"
repository = "https://github.com/xiwen-haochi/xlfill2pdf"

[tool.poetry.dependencies]
python = ">=3.6"
qrcode = ">=7.0.0"
reportlab = ">=3.6.8"
openpyxl = ">=3.0.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0"
pytest-cov = ">=2.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
